teste.output
Rules useless in parser due to conflicts

   15 $@5: ε

   49 proposicao: declaracaoVariavel


State 13 conflicts: 9 shift/reduce
State 21 conflicts: 13 reduce/reduce
State 26 conflicts: 9 shift/reduce
State 28 conflicts: 10 reduce/reduce
State 36 conflicts: 9 shift/reduce
State 48 conflicts: 9 shift/reduce, 10 reduce/reduce
State 53 conflicts: 9 shift/reduce
State 82 conflicts: 9 shift/reduce
State 90 conflicts: 9 shift/reduce
State 98 conflicts: 10 shift/reduce
State 100 conflicts: 10 shift/reduce
State 105 conflicts: 9 shift/reduce
State 107 conflicts: 9 shift/reduce


Grammar

    0 $accept: program $end

    1 $@1: ε

    2 program: FN $@1 NOME '(' parametros ')' '{' corpo return '}'

    3 $@2: ε

    4 program: FN MAIN $@2 '(' ')' '{' corpo return '}'

    5 $@3: ε

    6 funcao: FN $@3 NOME '(' parametros ')' '{' corpo return '}'

    7 parametros: NOME
    8           | parametros ','

    9 corpo: expressoes
   10      | proposicao
   11      | corpo corpo

   12 expressoes: declaracaoVariavel

   13 $@4: ε

   14 expressoes: NOME $@4 binarias NOME

   15 $@5: ε

   16 expressoes: NOME $@5 binarias NUMERO

   17 $@6: ε

   18 expressoes: NUMERO $@6 binarias NUMERO
   19           | unarias NOME
   20           | unarias NUMERO

   21 $@7: ε

   22 $@8: ε

   23 declaracaoVariavel: VAR NOME $@7 '=' NUMERO $@8 ';'

   24 condicao: valor logicas valor

   25 binarias: LE
   26         | GE
   27         | EQ
   28         | NE
   29         | GT
   30         | LT
   31         | AND
   32         | OR
   33         | ADD
   34         | SUBTRACT
   35         | MULTIPLY
   36         | DIVIDE
   37         | MODULE

   38 unarias: SUBTRACT
   39        | NOT

   40 logicas: LE
   41        | GE
   42        | EQ
   43        | NE
   44        | GT
   45        | LT

   46 return: RETURN valor ';'

   47 valor: NUMERO
   48      | NOME

   49 proposicao: declaracaoVariavel
   50           | atribuicao
   51           | desvioFluxo
   52           | laco
   53           | valor ADDSUB
   54           | return
   55           | funcao
   56           | ε

   57 $@9: ε

   58 desvioFluxo: IF $@9 condicao '{' corpo '}'

   59 $@10: ε

   60 laco: WHILE $@10 condicao '{' corpo '}'

   61 atribuicao: NOME '=' NUMERO ';'
   62           | NOME '=' NOME


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 2 4 6
    ')' (41) 2 4 6
    ',' (44) 8
    ';' (59) 23 46 61
    '=' (61) 23 61 62
    '{' (123) 2 4 6 58 60
    '}' (125) 2 4 6 58 60
    error (256)
    FN (258) 2 4 6
    VAR (259) 23
    WHILE (260) 60
    IF (261) 58
    NUMERO (262) 16 18 20 23 47 61
    MAIN (263) 4
    NOME (264) 2 6 7 14 16 19 23 48 61 62
    LE (265) 25 40
    GE (266) 26 41
    EQ (267) 27 42
    NE (268) 28 43
    GT (269) 29 44
    LT (270) 30 45
    AND (271) 31
    OR (272) 32
    ADD (273) 33
    MULTIPLY (274) 35
    DIVIDE (275) 36
    MODULE (276) 37
    SUBTRACT (277) 34 38
    ADDSUB (278) 53
    NOT (279) 39
    RETURN (280) 46


Nonterminals, with rules where they appear

    $accept (33)
        on left: 0
    program (34)
        on left: 2 4
        on right: 0
    $@1 (35)
        on left: 1
        on right: 2
    $@2 (36)
        on left: 3
        on right: 4
    funcao (37)
        on left: 6
        on right: 55
    $@3 (38)
        on left: 5
        on right: 6
    parametros (39)
        on left: 7 8
        on right: 2 6 8
    corpo (40)
        on left: 9 10 11
        on right: 2 4 6 11 58 60
    expressoes (41)
        on left: 12 14 16 18 19 20
        on right: 9
    $@4 (42)
        on left: 13
        on right: 14
    $@5 (43)
        on left: 15
        on right: 16
    $@6 (44)
        on left: 17
        on right: 18
    declaracaoVariavel (45)
        on left: 23
        on right: 12 49
    $@7 (46)
        on left: 21
        on right: 23
    $@8 (47)
        on left: 22
        on right: 23
    condicao (48)
        on left: 24
        on right: 58 60
    binarias (49)
        on left: 25 26 27 28 29 30 31 32 33 34 35 36 37
        on right: 14 16 18
    unarias (50)
        on left: 38 39
        on right: 19 20
    logicas (51)
        on left: 40 41 42 43 44 45
        on right: 24
    return (52)
        on left: 46
        on right: 2 4 6 54
    valor (53)
        on left: 47 48
        on right: 24 46 53
    proposicao (54)
        on left: 49 50 51 52 53 54 55 56
        on right: 10
    desvioFluxo (55)
        on left: 58
        on right: 51
    $@9 (56)
        on left: 57
        on right: 58
    laco (57)
        on left: 60
        on right: 52
    $@10 (58)
        on left: 59
        on right: 60
    atribuicao (59)
        on left: 61 62
        on right: 50


State 0

    0 $accept: • program $end

    FN  shift, and go to state 1

    program  go to state 2


State 1

    2 program: FN • $@1 NOME '(' parametros ')' '{' corpo return '}'
    4        | FN • MAIN $@2 '(' ')' '{' corpo return '}'

    MAIN  shift, and go to state 3

    $default  reduce using rule 1 ($@1)

    $@1  go to state 4


State 2

    0 $accept: program • $end

    $end  shift, and go to state 5


State 3

    4 program: FN MAIN • $@2 '(' ')' '{' corpo return '}'

    $default  reduce using rule 3 ($@2)

    $@2  go to state 6


State 4

    2 program: FN $@1 • NOME '(' parametros ')' '{' corpo return '}'

    NOME  shift, and go to state 7


State 5

    0 $accept: program $end •

    $default  accept


State 6

    4 program: FN MAIN $@2 • '(' ')' '{' corpo return '}'

    '('  shift, and go to state 8


State 7

    2 program: FN $@1 NOME • '(' parametros ')' '{' corpo return '}'

    '('  shift, and go to state 9


State 8

    4 program: FN MAIN $@2 '(' • ')' '{' corpo return '}'

    ')'  shift, and go to state 10


State 9

    2 program: FN $@1 NOME '(' • parametros ')' '{' corpo return '}'

    NOME  shift, and go to state 11

    parametros  go to state 12


State 10

    4 program: FN MAIN $@2 '(' ')' • '{' corpo return '}'

    '{'  shift, and go to state 13


State 11

    7 parametros: NOME •

    $default  reduce using rule 7 (parametros)


State 12

    2 program: FN $@1 NOME '(' parametros • ')' '{' corpo return '}'
    8 parametros: parametros • ','

    ')'  shift, and go to state 14
    ','  shift, and go to state 15


State 13

    4 program: FN MAIN $@2 '(' ')' '{' • corpo return '}'

    FN        shift, and go to state 16
    VAR       shift, and go to state 17
    WHILE     shift, and go to state 18
    IF        shift, and go to state 19
    NUMERO    shift, and go to state 20
    NOME      shift, and go to state 21
    SUBTRACT  shift, and go to state 22
    NOT       shift, and go to state 23
    RETURN    shift, and go to state 24

    FN        [reduce using rule 56 (proposicao)]
    VAR       [reduce using rule 56 (proposicao)]
    WHILE     [reduce using rule 56 (proposicao)]
    IF        [reduce using rule 56 (proposicao)]
    NUMERO    [reduce using rule 56 (proposicao)]
    NOME      [reduce using rule 56 (proposicao)]
    SUBTRACT  [reduce using rule 56 (proposicao)]
    NOT       [reduce using rule 56 (proposicao)]
    RETURN    [reduce using rule 56 (proposicao)]

    funcao              go to state 25
    corpo               go to state 26
    expressoes          go to state 27
    declaracaoVariavel  go to state 28
    unarias             go to state 29
    return              go to state 30
    valor               go to state 31
    proposicao          go to state 32
    desvioFluxo         go to state 33
    laco                go to state 34
    atribuicao          go to state 35


State 14

    2 program: FN $@1 NOME '(' parametros ')' • '{' corpo return '}'

    '{'  shift, and go to state 36


State 15

    8 parametros: parametros ',' •

    $default  reduce using rule 8 (parametros)


State 16

    6 funcao: FN • $@3 NOME '(' parametros ')' '{' corpo return '}'

    $default  reduce using rule 5 ($@3)

    $@3  go to state 37


State 17

   23 declaracaoVariavel: VAR • NOME $@7 '=' NUMERO $@8 ';'

    NOME  shift, and go to state 38


State 18

   60 laco: WHILE • $@10 condicao '{' corpo '}'

    $default  reduce using rule 59 ($@10)

    $@10  go to state 39


State 19

   58 desvioFluxo: IF • $@9 condicao '{' corpo '}'

    $default  reduce using rule 57 ($@9)

    $@9  go to state 40


State 20

   18 expressoes: NUMERO • $@6 binarias NUMERO
   47 valor: NUMERO •

    ADDSUB    reduce using rule 47 (valor)
    $default  reduce using rule 17 ($@6)

    $@6  go to state 41


State 21

   14 expressoes: NOME • $@4 binarias NOME
   16           | NOME • $@5 binarias NUMERO
   48 valor: NOME •
   61 atribuicao: NOME • '=' NUMERO ';'
   62           | NOME • '=' NOME

    '='  shift, and go to state 42

    LE        reduce using rule 13 ($@4)
    LE        [reduce using rule 15 ($@5)]
    GE        reduce using rule 13 ($@4)
    GE        [reduce using rule 15 ($@5)]
    EQ        reduce using rule 13 ($@4)
    EQ        [reduce using rule 15 ($@5)]
    NE        reduce using rule 13 ($@4)
    NE        [reduce using rule 15 ($@5)]
    GT        reduce using rule 13 ($@4)
    GT        [reduce using rule 15 ($@5)]
    LT        reduce using rule 13 ($@4)
    LT        [reduce using rule 15 ($@5)]
    AND       reduce using rule 13 ($@4)
    AND       [reduce using rule 15 ($@5)]
    OR        reduce using rule 13 ($@4)
    OR        [reduce using rule 15 ($@5)]
    ADD       reduce using rule 13 ($@4)
    ADD       [reduce using rule 15 ($@5)]
    MULTIPLY  reduce using rule 13 ($@4)
    MULTIPLY  [reduce using rule 15 ($@5)]
    DIVIDE    reduce using rule 13 ($@4)
    DIVIDE    [reduce using rule 15 ($@5)]
    MODULE    reduce using rule 13 ($@4)
    MODULE    [reduce using rule 15 ($@5)]
    SUBTRACT  reduce using rule 13 ($@4)
    SUBTRACT  [reduce using rule 15 ($@5)]
    ADDSUB    reduce using rule 48 (valor)
    $default  reduce using rule 13 ($@4)

    $@4  go to state 43
    $@5  go to state 44


State 22

   38 unarias: SUBTRACT •

    $default  reduce using rule 38 (unarias)


State 23

   39 unarias: NOT •

    $default  reduce using rule 39 (unarias)


State 24

   46 return: RETURN • valor ';'

    NUMERO  shift, and go to state 45
    NOME    shift, and go to state 46

    valor  go to state 47


State 25

   55 proposicao: funcao •

    $default  reduce using rule 55 (proposicao)


State 26

    4 program: FN MAIN $@2 '(' ')' '{' corpo • return '}'
   11 corpo: corpo • corpo

    FN        shift, and go to state 16
    VAR       shift, and go to state 17
    WHILE     shift, and go to state 18
    IF        shift, and go to state 19
    NUMERO    shift, and go to state 20
    NOME      shift, and go to state 21
    SUBTRACT  shift, and go to state 22
    NOT       shift, and go to state 23
    RETURN    shift, and go to state 24

    FN        [reduce using rule 56 (proposicao)]
    VAR       [reduce using rule 56 (proposicao)]
    WHILE     [reduce using rule 56 (proposicao)]
    IF        [reduce using rule 56 (proposicao)]
    NUMERO    [reduce using rule 56 (proposicao)]
    NOME      [reduce using rule 56 (proposicao)]
    SUBTRACT  [reduce using rule 56 (proposicao)]
    NOT       [reduce using rule 56 (proposicao)]
    RETURN    [reduce using rule 56 (proposicao)]

    funcao              go to state 25
    corpo               go to state 48
    expressoes          go to state 27
    declaracaoVariavel  go to state 28
    unarias             go to state 29
    return              go to state 49
    valor               go to state 31
    proposicao          go to state 32
    desvioFluxo         go to state 33
    laco                go to state 34
    atribuicao          go to state 35


State 27

    9 corpo: expressoes •

    $default  reduce using rule 9 (corpo)


State 28

   12 expressoes: declaracaoVariavel •
   49 proposicao: declaracaoVariavel •

    FN        reduce using rule 12 (expressoes)
    FN        [reduce using rule 49 (proposicao)]
    VAR       reduce using rule 12 (expressoes)
    VAR       [reduce using rule 49 (proposicao)]
    WHILE     reduce using rule 12 (expressoes)
    WHILE     [reduce using rule 49 (proposicao)]
    IF        reduce using rule 12 (expressoes)
    IF        [reduce using rule 49 (proposicao)]
    NUMERO    reduce using rule 12 (expressoes)
    NUMERO    [reduce using rule 49 (proposicao)]
    NOME      reduce using rule 12 (expressoes)
    NOME      [reduce using rule 49 (proposicao)]
    SUBTRACT  reduce using rule 12 (expressoes)
    SUBTRACT  [reduce using rule 49 (proposicao)]
    NOT       reduce using rule 12 (expressoes)
    NOT       [reduce using rule 49 (proposicao)]
    RETURN    reduce using rule 12 (expressoes)
    RETURN    [reduce using rule 49 (proposicao)]
    '}'       reduce using rule 12 (expressoes)
    '}'       [reduce using rule 49 (proposicao)]
    $default  reduce using rule 12 (expressoes)


State 29

   19 expressoes: unarias • NOME
   20           | unarias • NUMERO

    NUMERO  shift, and go to state 50
    NOME    shift, and go to state 51


State 30

   54 proposicao: return •

    $default  reduce using rule 54 (proposicao)


State 31

   53 proposicao: valor • ADDSUB

    ADDSUB  shift, and go to state 52


State 32

   10 corpo: proposicao •

    $default  reduce using rule 10 (corpo)


State 33

   51 proposicao: desvioFluxo •

    $default  reduce using rule 51 (proposicao)


State 34

   52 proposicao: laco •

    $default  reduce using rule 52 (proposicao)


State 35

   50 proposicao: atribuicao •

    $default  reduce using rule 50 (proposicao)


State 36

    2 program: FN $@1 NOME '(' parametros ')' '{' • corpo return '}'

    FN        shift, and go to state 16
    VAR       shift, and go to state 17
    WHILE     shift, and go to state 18
    IF        shift, and go to state 19
    NUMERO    shift, and go to state 20
    NOME      shift, and go to state 21
    SUBTRACT  shift, and go to state 22
    NOT       shift, and go to state 23
    RETURN    shift, and go to state 24

    FN        [reduce using rule 56 (proposicao)]
    VAR       [reduce using rule 56 (proposicao)]
    WHILE     [reduce using rule 56 (proposicao)]
    IF        [reduce using rule 56 (proposicao)]
    NUMERO    [reduce using rule 56 (proposicao)]
    NOME      [reduce using rule 56 (proposicao)]
    SUBTRACT  [reduce using rule 56 (proposicao)]
    NOT       [reduce using rule 56 (proposicao)]
    RETURN    [reduce using rule 56 (proposicao)]

    funcao              go to state 25
    corpo               go to state 53
    expressoes          go to state 27
    declaracaoVariavel  go to state 28
    unarias             go to state 29
    return              go to state 30
    valor               go to state 31
    proposicao          go to state 32
    desvioFluxo         go to state 33
    laco                go to state 34
    atribuicao          go to state 35


State 37

    6 funcao: FN $@3 • NOME '(' parametros ')' '{' corpo return '}'

    NOME  shift, and go to state 54


State 38

   23 declaracaoVariavel: VAR NOME • $@7 '=' NUMERO $@8 ';'

    $default  reduce using rule 21 ($@7)

    $@7  go to state 55


State 39

   60 laco: WHILE $@10 • condicao '{' corpo '}'

    NUMERO  shift, and go to state 45
    NOME    shift, and go to state 46

    condicao  go to state 56
    valor     go to state 57


State 40

   58 desvioFluxo: IF $@9 • condicao '{' corpo '}'

    NUMERO  shift, and go to state 45
    NOME    shift, and go to state 46

    condicao  go to state 58
    valor     go to state 57


State 41

   18 expressoes: NUMERO $@6 • binarias NUMERO

    LE        shift, and go to state 59
    GE        shift, and go to state 60
    EQ        shift, and go to state 61
    NE        shift, and go to state 62
    GT        shift, and go to state 63
    LT        shift, and go to state 64
    AND       shift, and go to state 65
    OR        shift, and go to state 66
    ADD       shift, and go to state 67
    MULTIPLY  shift, and go to state 68
    DIVIDE    shift, and go to state 69
    MODULE    shift, and go to state 70
    SUBTRACT  shift, and go to state 71

    binarias  go to state 72


State 42

   61 atribuicao: NOME '=' • NUMERO ';'
   62           | NOME '=' • NOME

    NUMERO  shift, and go to state 73
    NOME    shift, and go to state 74


State 43

   14 expressoes: NOME $@4 • binarias NOME

    LE        shift, and go to state 59
    GE        shift, and go to state 60
    EQ        shift, and go to state 61
    NE        shift, and go to state 62
    GT        shift, and go to state 63
    LT        shift, and go to state 64
    AND       shift, and go to state 65
    OR        shift, and go to state 66
    ADD       shift, and go to state 67
    MULTIPLY  shift, and go to state 68
    DIVIDE    shift, and go to state 69
    MODULE    shift, and go to state 70
    SUBTRACT  shift, and go to state 71

    binarias  go to state 75


State 44

   16 expressoes: NOME $@5 • binarias NUMERO

    LE        shift, and go to state 59
    GE        shift, and go to state 60
    EQ        shift, and go to state 61
    NE        shift, and go to state 62
    GT        shift, and go to state 63
    LT        shift, and go to state 64
    AND       shift, and go to state 65
    OR        shift, and go to state 66
    ADD       shift, and go to state 67
    MULTIPLY  shift, and go to state 68
    DIVIDE    shift, and go to state 69
    MODULE    shift, and go to state 70
    SUBTRACT  shift, and go to state 71

    binarias  go to state 76


State 45

   47 valor: NUMERO •

    $default  reduce using rule 47 (valor)


State 46

   48 valor: NOME •

    $default  reduce using rule 48 (valor)


State 47

   46 return: RETURN valor • ';'

    ';'  shift, and go to state 77


State 48

   11 corpo: corpo • corpo
   11      | corpo corpo •

    FN        shift, and go to state 16
    VAR       shift, and go to state 17
    WHILE     shift, and go to state 18
    IF        shift, and go to state 19
    NUMERO    shift, and go to state 20
    NOME      shift, and go to state 21
    SUBTRACT  shift, and go to state 22
    NOT       shift, and go to state 23
    RETURN    shift, and go to state 24

    FN        [reduce using rule 11 (corpo)]
    FN        [reduce using rule 56 (proposicao)]
    VAR       [reduce using rule 11 (corpo)]
    VAR       [reduce using rule 56 (proposicao)]
    WHILE     [reduce using rule 11 (corpo)]
    WHILE     [reduce using rule 56 (proposicao)]
    IF        [reduce using rule 11 (corpo)]
    IF        [reduce using rule 56 (proposicao)]
    NUMERO    [reduce using rule 11 (corpo)]
    NUMERO    [reduce using rule 56 (proposicao)]
    NOME      [reduce using rule 11 (corpo)]
    NOME      [reduce using rule 56 (proposicao)]
    SUBTRACT  [reduce using rule 11 (corpo)]
    SUBTRACT  [reduce using rule 56 (proposicao)]
    NOT       [reduce using rule 11 (corpo)]
    NOT       [reduce using rule 56 (proposicao)]
    RETURN    [reduce using rule 11 (corpo)]
    RETURN    [reduce using rule 56 (proposicao)]
    '}'       reduce using rule 11 (corpo)
    '}'       [reduce using rule 56 (proposicao)]
    $default  reduce using rule 11 (corpo)

    funcao              go to state 25
    corpo               go to state 48
    expressoes          go to state 27
    declaracaoVariavel  go to state 28
    unarias             go to state 29
    return              go to state 30
    valor               go to state 31
    proposicao          go to state 32
    desvioFluxo         go to state 33
    laco                go to state 34
    atribuicao          go to state 35


State 49

    4 program: FN MAIN $@2 '(' ')' '{' corpo return • '}'
   54 proposicao: return •

    '}'  shift, and go to state 78

    $default  reduce using rule 54 (proposicao)


State 50

   20 expressoes: unarias NUMERO •

    $default  reduce using rule 20 (expressoes)


State 51

   19 expressoes: unarias NOME •

    $default  reduce using rule 19 (expressoes)


State 52

   53 proposicao: valor ADDSUB •

    $default  reduce using rule 53 (proposicao)


State 53

    2 program: FN $@1 NOME '(' parametros ')' '{' corpo • return '}'
   11 corpo: corpo • corpo

    FN        shift, and go to state 16
    VAR       shift, and go to state 17
    WHILE     shift, and go to state 18
    IF        shift, and go to state 19
    NUMERO    shift, and go to state 20
    NOME      shift, and go to state 21
    SUBTRACT  shift, and go to state 22
    NOT       shift, and go to state 23
    RETURN    shift, and go to state 24

    FN        [reduce using rule 56 (proposicao)]
    VAR       [reduce using rule 56 (proposicao)]
    WHILE     [reduce using rule 56 (proposicao)]
    IF        [reduce using rule 56 (proposicao)]
    NUMERO    [reduce using rule 56 (proposicao)]
    NOME      [reduce using rule 56 (proposicao)]
    SUBTRACT  [reduce using rule 56 (proposicao)]
    NOT       [reduce using rule 56 (proposicao)]
    RETURN    [reduce using rule 56 (proposicao)]

    funcao              go to state 25
    corpo               go to state 48
    expressoes          go to state 27
    declaracaoVariavel  go to state 28
    unarias             go to state 29
    return              go to state 79
    valor               go to state 31
    proposicao          go to state 32
    desvioFluxo         go to state 33
    laco                go to state 34
    atribuicao          go to state 35


State 54

    6 funcao: FN $@3 NOME • '(' parametros ')' '{' corpo return '}'

    '('  shift, and go to state 80


State 55

   23 declaracaoVariavel: VAR NOME $@7 • '=' NUMERO $@8 ';'

    '='  shift, and go to state 81


State 56

   60 laco: WHILE $@10 condicao • '{' corpo '}'

    '{'  shift, and go to state 82


State 57

   24 condicao: valor • logicas valor

    LE  shift, and go to state 83
    GE  shift, and go to state 84
    EQ  shift, and go to state 85
    NE  shift, and go to state 86
    GT  shift, and go to state 87
    LT  shift, and go to state 88

    logicas  go to state 89


State 58

   58 desvioFluxo: IF $@9 condicao • '{' corpo '}'

    '{'  shift, and go to state 90


State 59

   25 binarias: LE •

    $default  reduce using rule 25 (binarias)


State 60

   26 binarias: GE •

    $default  reduce using rule 26 (binarias)


State 61

   27 binarias: EQ •

    $default  reduce using rule 27 (binarias)


State 62

   28 binarias: NE •

    $default  reduce using rule 28 (binarias)


State 63

   29 binarias: GT •

    $default  reduce using rule 29 (binarias)


State 64

   30 binarias: LT •

    $default  reduce using rule 30 (binarias)


State 65

   31 binarias: AND •

    $default  reduce using rule 31 (binarias)


State 66

   32 binarias: OR •

    $default  reduce using rule 32 (binarias)


State 67

   33 binarias: ADD •

    $default  reduce using rule 33 (binarias)


State 68

   35 binarias: MULTIPLY •

    $default  reduce using rule 35 (binarias)


State 69

   36 binarias: DIVIDE •

    $default  reduce using rule 36 (binarias)


State 70

   37 binarias: MODULE •

    $default  reduce using rule 37 (binarias)


State 71

   34 binarias: SUBTRACT •

    $default  reduce using rule 34 (binarias)


State 72

   18 expressoes: NUMERO $@6 binarias • NUMERO

    NUMERO  shift, and go to state 91


State 73

   61 atribuicao: NOME '=' NUMERO • ';'

    ';'  shift, and go to state 92


State 74

   62 atribuicao: NOME '=' NOME •

    $default  reduce using rule 62 (atribuicao)


State 75

   14 expressoes: NOME $@4 binarias • NOME

    NOME  shift, and go to state 93


State 76

   16 expressoes: NOME $@5 binarias • NUMERO

    NUMERO  shift, and go to state 94


State 77

   46 return: RETURN valor ';' •

    $default  reduce using rule 46 (return)


State 78

    4 program: FN MAIN $@2 '(' ')' '{' corpo return '}' •

    $default  reduce using rule 4 (program)


State 79

    2 program: FN $@1 NOME '(' parametros ')' '{' corpo return • '}'
   54 proposicao: return •

    '}'  shift, and go to state 95

    $default  reduce using rule 54 (proposicao)


State 80

    6 funcao: FN $@3 NOME '(' • parametros ')' '{' corpo return '}'

    NOME  shift, and go to state 11

    parametros  go to state 96


State 81

   23 declaracaoVariavel: VAR NOME $@7 '=' • NUMERO $@8 ';'

    NUMERO  shift, and go to state 97


State 82

   60 laco: WHILE $@10 condicao '{' • corpo '}'

    FN        shift, and go to state 16
    VAR       shift, and go to state 17
    WHILE     shift, and go to state 18
    IF        shift, and go to state 19
    NUMERO    shift, and go to state 20
    NOME      shift, and go to state 21
    SUBTRACT  shift, and go to state 22
    NOT       shift, and go to state 23
    RETURN    shift, and go to state 24

    FN        [reduce using rule 56 (proposicao)]
    VAR       [reduce using rule 56 (proposicao)]
    WHILE     [reduce using rule 56 (proposicao)]
    IF        [reduce using rule 56 (proposicao)]
    NUMERO    [reduce using rule 56 (proposicao)]
    NOME      [reduce using rule 56 (proposicao)]
    SUBTRACT  [reduce using rule 56 (proposicao)]
    NOT       [reduce using rule 56 (proposicao)]
    RETURN    [reduce using rule 56 (proposicao)]
    $default  reduce using rule 56 (proposicao)

    funcao              go to state 25
    corpo               go to state 98
    expressoes          go to state 27
    declaracaoVariavel  go to state 28
    unarias             go to state 29
    return              go to state 30
    valor               go to state 31
    proposicao          go to state 32
    desvioFluxo         go to state 33
    laco                go to state 34
    atribuicao          go to state 35


State 83

   40 logicas: LE •

    $default  reduce using rule 40 (logicas)


State 84

   41 logicas: GE •

    $default  reduce using rule 41 (logicas)


State 85

   42 logicas: EQ •

    $default  reduce using rule 42 (logicas)


State 86

   43 logicas: NE •

    $default  reduce using rule 43 (logicas)


State 87

   44 logicas: GT •

    $default  reduce using rule 44 (logicas)


State 88

   45 logicas: LT •

    $default  reduce using rule 45 (logicas)


State 89

   24 condicao: valor logicas • valor

    NUMERO  shift, and go to state 45
    NOME    shift, and go to state 46

    valor  go to state 99


State 90

   58 desvioFluxo: IF $@9 condicao '{' • corpo '}'

    FN        shift, and go to state 16
    VAR       shift, and go to state 17
    WHILE     shift, and go to state 18
    IF        shift, and go to state 19
    NUMERO    shift, and go to state 20
    NOME      shift, and go to state 21
    SUBTRACT  shift, and go to state 22
    NOT       shift, and go to state 23
    RETURN    shift, and go to state 24

    FN        [reduce using rule 56 (proposicao)]
    VAR       [reduce using rule 56 (proposicao)]
    WHILE     [reduce using rule 56 (proposicao)]
    IF        [reduce using rule 56 (proposicao)]
    NUMERO    [reduce using rule 56 (proposicao)]
    NOME      [reduce using rule 56 (proposicao)]
    SUBTRACT  [reduce using rule 56 (proposicao)]
    NOT       [reduce using rule 56 (proposicao)]
    RETURN    [reduce using rule 56 (proposicao)]
    $default  reduce using rule 56 (proposicao)

    funcao              go to state 25
    corpo               go to state 100
    expressoes          go to state 27
    declaracaoVariavel  go to state 28
    unarias             go to state 29
    return              go to state 30
    valor               go to state 31
    proposicao          go to state 32
    desvioFluxo         go to state 33
    laco                go to state 34
    atribuicao          go to state 35


State 91

   18 expressoes: NUMERO $@6 binarias NUMERO •

    $default  reduce using rule 18 (expressoes)


State 92

   61 atribuicao: NOME '=' NUMERO ';' •

    $default  reduce using rule 61 (atribuicao)


State 93

   14 expressoes: NOME $@4 binarias NOME •

    $default  reduce using rule 14 (expressoes)


State 94

   16 expressoes: NOME $@5 binarias NUMERO •

    $default  reduce using rule 16 (expressoes)


State 95

    2 program: FN $@1 NOME '(' parametros ')' '{' corpo return '}' •

    $default  reduce using rule 2 (program)


State 96

    6 funcao: FN $@3 NOME '(' parametros • ')' '{' corpo return '}'
    8 parametros: parametros • ','

    ')'  shift, and go to state 101
    ','  shift, and go to state 15


State 97

   23 declaracaoVariavel: VAR NOME $@7 '=' NUMERO • $@8 ';'

    $default  reduce using rule 22 ($@8)

    $@8  go to state 102


State 98

   11 corpo: corpo • corpo
   60 laco: WHILE $@10 condicao '{' corpo • '}'

    FN        shift, and go to state 16
    VAR       shift, and go to state 17
    WHILE     shift, and go to state 18
    IF        shift, and go to state 19
    NUMERO    shift, and go to state 20
    NOME      shift, and go to state 21
    SUBTRACT  shift, and go to state 22
    NOT       shift, and go to state 23
    RETURN    shift, and go to state 24
    '}'       shift, and go to state 103
